--- a/client/fields.jade
+++ b/client/fields.jade
@@ -519,7 +519,7 @@ template(name='array_edit')
     if field_value
         each field_value
             if currentUser
-                .ui.large.label.touch_element
+                .ui.large.basic.label.touch_element
                     i.delete.icon.remove_element
                     |#{this}
                 // .ui.compact.button.pick_tag
