--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -98,34 +98,34 @@ template(name='profile_layout')
                         a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
                             i.large.dollar.icon
                             span credit
-                        a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/events" class="{{isActiveRoute 'user_events'}}" title="#{user.username} events")
-                            i.calendar.large.icon
-                            span events
+                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/events" class="{{isActiveRoute 'user_events'}}" title="#{user.username} events")
+                        //     i.calendar.large.icon
+                        //     span events
                         a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/friends" class="{{isActiveRoute 'user_friends'}}" title="#{user.username} friends")
                             i.users.large.icon
                             span friends
-                        a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title="#{user.username} requests")
-                            i.large.concierge.bell.icon
-                            span requests
-                        a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/offers" class="{{isActiveRoute 'user_offers'}}" title="#{user.username} offers")
-                            i.large.hand.holding.heart.icon
-                            span offers
-                        a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
-                            i.chat.large.icon
-                            span chat
-                        a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/delivery" class="{{isActiveRoute 'user_delivery'}}" title="#{user.username} delivery")
-                            i.large.truck.icon
-                            span delivery
-                        a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}" title="#{user.username} messages")
-                            i.fire.large.icon
-                            span tribes
+                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title="#{user.username} requests")
+                        //     i.large.concierge.bell.icon
+                        //     span requests
+                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/offers" class="{{isActiveRoute 'user_offers'}}" title="#{user.username} offers")
+                        //     i.large.hand.holding.heart.icon
+                        //     span offers
+                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
+                        //     i.chat.large.icon
+                        //     span chat
+                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/delivery" class="{{isActiveRoute 'user_delivery'}}" title="#{user.username} delivery")
+                        //     i.large.truck.icon
+                        //     span delivery
+                        // a.ui.basic.compact.tertiary.button.select_term.profile_nav_item(href="/u/#{username}/tribes" class="{{isActiveRoute 'user_tribes'}}" title="#{user.username} messages")
+                        //     i.fire.large.icon
+                        //     span tribes
    
-                        a.ui.basic.compact.tertiary.button(href="/u/#{username}/badges" class="{{isActiveRoute 'user_badges'}}" title="#{user.username} badges")
-                            i.certificate.large.icon
-                            span.mobile.hidden badges
-                        a.ui.basic.compact.tertiary.button(href="/u/#{username}/food" class="{{isActiveRoute 'user_food'}}" title="#{user.username} food")
-                            i.large.food.icon
-                            span food
+                        // a.ui.basic.compact.tertiary.button(href="/u/#{username}/badges" class="{{isActiveRoute 'user_badges'}}" title="#{user.username} badges")
+                        //     i.certificate.large.icon
+                        //     span.mobile.hidden badges
+                        // a.ui.basic.compact.tertiary.button(href="/u/#{username}/food" class="{{isActiveRoute 'user_food'}}" title="#{user.username} food")
+                        //     i.large.food.icon
+                        //     span food
                         // .spacer
                         // .spacer
                         if is_dev
