simplify nav, remove page and bages

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,7 +1,7 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.seven.item.menu.hscroll
-        a.icon.item.toggle_sidebar
-            i.bars.icon
+    .ui.fluid.attached.borderless.four.item.menu.hscroll
+        // a.icon.item.toggle_sidebar
+        //     i.bars.icon
         // a.icon.item.set_tarot(href="/s/tarot" class="{{isActiveRoute '/s/tarot'}}")
         //     i.moon.icon
             // |tarot
