--- a/parts/blocks.jade
+++ b/parts/blocks.jade
@@ -82,22 +82,18 @@ template(name='session_toggle_button')
         i.large.icon(class=icon)
 
 template(name='comments')
-    .spacer
-    .ui.inline.grey.header
-        i.chat.outline.icon
-        |comments
     div
-    .ui.fluid.icon.large.input
+    .ui.fluid.icon.transparent.input
         i.plus.icon
-        input.add_comment(model='text' placeholder='add')
+        input.add_comment(model='text' placeholder='comment')
     .ui.comments
         each doc_comments
             .comment
                 a.avatar
                     img.ui.avatar.image(src="{{c.url _author.profile_image_id height=500 width=500 gravity='face' crop='fill'}}") 
                 .content
-                    a.author(href="/u/#{_author.username}")
-                        |#{_author.name}
+                    a.author(href="/u/#{_author_username}")
+                        |#{_author_username}
                     .metadata
                         span.date #{when}
                     .text
