--- a/client/style.css
+++ b/client/style.css
@@ -625,7 +625,7 @@ a.title, #title {
 
 input {
     /*margin: 10px !important;*/
-    border-radius: 10px !important; 
+    /*border-radius: 10px !important; */
 }
 
 ::-webkit-scrollbar {
